# bazel-scala-akka

./: .gitignore  .scalafmt.conf  Application.scala  BUILD.bazel  WORKSPACE.bazel  dependencies.yaml  my_rules.bzl
maven/: BUILD.bazel  VERSION  workspace_refs.json
my-akka-library/: BUILD.bazel
my-akka-library/src/main/scala/examples/org/: ElementFetcher.scala  Hello.scala
my-akka-library/src/test/scala/examples/org/: ElementFetcherSpec.scala
src/main/scala/examples/org/: Application.scala  BUILD.bazel  Hello.scala
tools/build_rules/: BUILD.bazel
