load("//:my_rules.bzl", "scala_library", "scala_test")

scala_library(
    name = "build",
    srcs = glob(["src/main/scala/**/*.scala"]),
    format = True,
    visibility = ["//:__pkg__"],
        deps = [
            "@third_party//3rdparty/jvm/com/typesafe/akka:akka_actor",
            "@third_party//3rdparty/jvm/com/typesafe/akka:akka_stream"
        ]
)

scala_test(
    name = "test",
    srcs = glob(["src/test/scala/**/*Spec.scala"]),
    format = True,
    deps = [
                "@third_party//3rdparty/jvm/com/typesafe/akka:akka_actor",
                "@third_party//3rdparty/jvm/org/scalatest:scalatest",
                ":build"
            ]
)
